--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c8681">  <td>24/09/12 16:56:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPwdLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@ae3540e]">forgotPwdLinkExistTest</td> 
-  <td>main@1075803699</td>   <td></td> </tr>
-<tr bgcolor="6c8681">  <td>24/09/12 16:56:37</td>   <td>119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@ae3540e]">loginPageTitleTest</td> 
-  <td>main@1075803699</td>   <td></td> </tr>
-<tr bgcolor="6c8681">  <td>24/09/12 16:56:38</td>   <td>136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@ae3540e]">loginPageURLTest</td> 
-  <td>main@1075803699</td>   <td></td> </tr>
-<tr bgcolor="6c8681">  <td>24/09/12 16:56:38</td>   <td>156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@ae3540e]">loginTest</td> 
-  <td>main@1075803699</td>   <td></td> </tr>
-<tr bgcolor="e7a160">  <td>24/09/12 16:56:34</td>   <td>-3582</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@ae3540e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1075803699</td>   <td></td> </tr>
+<tr bgcolor="6c8681">  <td>25/02/18 22:25:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccPageTest.accPageHeadersTest()[pri:0, instance:com.qa.opencart.tests.AccPageTest@600b9d27]">accPageHeadersTest</td> 
+  <td>main@838812606</td>   <td></td> </tr>
+<tr bgcolor="6c8681">  <td>25/02/18 22:25:26</td>   <td>226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccPageTest.accPageTitleTest()[pri:0, instance:com.qa.opencart.tests.AccPageTest@600b9d27]">accPageTitleTest</td> 
+  <td>main@838812606</td>   <td></td> </tr>
+<tr bgcolor="6c8681">  <td>25/02/18 22:25:26</td>   <td>255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccPageTest.accPageURLTest()[pri:0, instance:com.qa.opencart.tests.AccPageTest@600b9d27]">accPageURLTest</td> 
+  <td>main@838812606</td>   <td></td> </tr>
+<tr bgcolor="6c8681">  <td>25/02/18 22:25:24</td>   <td>-1365</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccPageTest.accSetup()[pri:0, instance:com.qa.opencart.tests.AccPageTest@600b9d27]">&gt;&gt;accSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@838812606</td>   <td></td> </tr>
+<tr bgcolor="e7a160">  <td>25/02/18 22:25:20</td>   <td>-5977</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.qa.opencart.tests.AccPageTest@600b9d27]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@838812606</td>   <td></td> </tr>
 </table>
